--- a/FlowersShop.WEB/FlowersShop.WEB.csproj
+++ b/FlowersShop.WEB/FlowersShop.WEB.csproj
@@ -177,6 +177,10 @@
     <Compile Include="Util\NinjectDependencyResolver.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\ShopDB.mdf" />
+    <Content Include="App_Data\ShopDB_log.ldf">
+      <DependentUpon>ShopDB.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -215,9 +219,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Commodities\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
