--- a/FlowersShop.DAL/FlowersShop.DAL.csproj
+++ b/FlowersShop.DAL/FlowersShop.DAL.csproj
@@ -55,6 +55,11 @@
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Migrations\201706221254131_db.cs" />
+    <Compile Include="Migrations\201706221254131_db.Designer.cs">
+      <DependentUpon>201706221254131_db.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\CityRepository.cs" />
@@ -66,6 +71,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201706221254131_db.resx">
+      <DependentUpon>201706221254131_db.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
