--- a/FlowersShop.BLL/FlowersShop.BLL.csproj
+++ b/FlowersShop.BLL/FlowersShop.BLL.csproj
@@ -71,6 +71,7 @@
     <Compile Include="DTO\CategoryDTO.cs" />
     <Compile Include="DTO\CityDTO.cs" />
     <Compile Include="DTO\ClientDTO.cs" />
+    <Compile Include="DTO\CommoditiesByCategoryDTO.cs" />
     <Compile Include="DTO\CommodityDTO.cs" />
     <Compile Include="DTO\OrderDTO.cs" />
     <Compile Include="Infrastructure\ServiceModule.cs" />
@@ -78,12 +79,14 @@
     <Compile Include="Interfaces\ICategoryService.cs" />
     <Compile Include="Interfaces\ICityService.cs" />
     <Compile Include="Interfaces\IClientService.cs" />
+    <Compile Include="Interfaces\ICommoditiesByCategory.cs" />
     <Compile Include="Interfaces\ICommoditiesService.cs" />
     <Compile Include="Interfaces\IOrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CategoryService.cs" />
     <Compile Include="Services\CityService.cs" />
     <Compile Include="Services\ClientService.cs" />
+    <Compile Include="Services\CommoditiesByCategoryService.cs" />
     <Compile Include="Services\CommoditiesService.cs" />
     <Compile Include="Services\OrderService.cs" />
   </ItemGroup>
