--- a/FlowersShop.WEB/Web.config
+++ b/FlowersShop.WEB/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="FlowersShopContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\ShopDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="FlowersShopContext" connectionString="data source=(LocalDB)\MSSQLLocalDB; Initial Catalog = FlowersShop; Integrated Security = True; MultipleActiveResultSets = True; App = EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="FlowersShopContext" connectionString="data source=(LocalDB)\MSSQLLocalDB; Initial Catalog=FlowersShop\FlowersShop.DAL\Data\; Integrated Security = True; MultipleActiveResultSets = True; App = EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
