--- a/FlowersShop.WEB/Web.config
+++ b/FlowersShop.WEB/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="FlowersShopContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\ShopDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="FlowersShopContext" connectionString="data source=(LocalDB)\MSSQLLocalDB; Initial Catalog=FlowersShop\FlowersShop.DAL\Data\; Integrated Security = True; MultipleActiveResultSets = True; App = EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="FlowersShopContext" connectionString="Data Source = (LocalDB)\MSSQLLocalDB; Initial Catalog = FlowersShop\FlowersShop.DAL\App_Data\ShopDB.mdf; App = EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
