--- a/FlowersShop.WEB/Web.config
+++ b/FlowersShop.WEB/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="FlowersShopContext" connectionString="Data Source = (LocalDB)\MSSQLLocalDB; Initial Catalog = FlowersShop\FlowersShop.DAL\App_Data\ShopDB.mdf; App = EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="FlowersShopEntities" connectionString="Data Source = (LocalDB)\MSSQLLocalDB; Initial Catalog = FlowersShop; Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
