--- a/FlowersShop.BLL/packages.config
+++ b/FlowersShop.BLL/packages.config
@@ -6,4 +6,5 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net47" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net47" developmentDependency="true" />
 </packages>
